# maptoposter

./: .dockerignore  .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  HOW TO RUN.txt  HYDERABAD_POSTER_GUIDE.md  HYDERABAD_POSTER_STATUS.md  LICENSE  Pipfile  QUICKSTART_EN.md  README.md  SHADCN_MIGRATION.md  Sound Map Generator.md  WEBUI_README.md  api_server.py  app.py  batch_sound_generator.py  compose.yml  create_interactive_map_poster.py  create_map_poster.py  create_map_poster_enhanced.py  docker-compose.yaml  docker-compose.yml  example_usage.py  font_management.py  gui.py  index.html  main.py  poster_design.py  pyproject.toml  quickstart_sound.md  render.yaml  requirements.txt  sound_map_advanced.py  sound_map_main.py  start.sh  web_ui.py
.mplconfig/: fontlist-v390.json
MapPosterStudio/: README.md  app.py  requirements.txt
backend/: Dockerfile  app.py  requirements.txt
docs/: contributing-gallery.md  custom-themes.md  examples.md  gallery-africa.md  gallery-asia.md  gallery-europe.md  gallery-north-america.md  gallery-oceania.md  gallery.md  hackers-guide.md  index.md  installation.md  output.md  package.json  pnpm-lock.yaml  project-structure.md  themes.md  usage.md  vercel.json
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
static/: script.js
templates/: index.html
themes/: blueprint.json  feature_based.json  midnight_blue.json  neon_cyberpunk.json  noir.json  noir_lakes.json  perplexity.json  personal.json  sakura.json  (+1 more)
universal-ui/tauri/: Cargo.toml  README.md  tauri.conf.json
universal-ui/tauri/src/: main.rs
(+40 files in other folders)
