[package]
name = "maptoposter"
version = "1.0.0"
description = "Universal UI for Maptoposter (Dual Mode)"
authors = ["Maptoposter Contributors"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-execute", "shell-sidecar", "dialog-open", "dialog-save", "fs-read-file", "fs-read-dir", "http-request"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
